--- a/javaonly.html
+++ b/javaonly.html
@@ -23,7 +23,7 @@
 
         const sendMessage = async (text) => {
             if (!text.trim()) return;
-            const message = { text: text.trim(), user: 'dennis' };
+            const message = { text: text.trim(), user: 'Isabella' };
 
             try {
                 const response = await fetch(API_URL, {
